# automation1

./: .gitmodules  CMakeLists.txt  Doxyfile  Readme.md  main.cpp
.github/workflows/: GitHubPagesDoxygenDeploy.yml
cmake/: Packing.cmake
include/: Axis.h  AxisClass.h  BissEncoder.h  BissEncoderClass.h  Controller.h  ControllerClass.h
src/: Axis.cpp  AxisClass.cpp  BissEncoder.cpp  BissEncoderClass.cpp  Controller.cpp  ControllerClass.cpp  MultiClassesFactory.cpp
